--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   shared_preferences: ^2.3.2
   fluttertoast: ^8.2.8
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
