--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_storage: ^11.6.0
   cloud_firestore: ^4.14.0
   firebase_auth: ^4.16.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
